# dhcp

./: $  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/allocators/: allocator.rs  mod.rs  subnet_map.rs
src/allocators/dynamic_alloc/: dynamic_allocator.rs  mod.rs
src/allocators/static_alloc/: mod.rs  static_allocation.rs  static_allocator.rs
src/cfg/: main_cfg.rs  mod.rs  subnets_cfg.rs
src/data/: data.rs  mod.rs
src/hooks/: allocator.rs  mod.rs  responder.rs
src/leases/: ip_subnet.rs  lease.rs  mod.rs
src/netutils/: hw_addr.rs  mod.rs
src/packet/: dhcp_options.rs  dhcp_packet.rs  mod.rs
src/transactions/: dhcp_transactions.rs  hook.rs  manager.rs  mod.rs  transaction.rs
tests/: main.yml  subnets.yml
