[package]
name = "dhcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

fp_core = { path = "../fp_core" }
chrono = "0.4.24"
mac_address  = "1.1.4"
itertools = "0.10.5"
byteorder = "1.4.3"
log = "0.4.17"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
